# Polymetis_Franka_Teleop

./: .gitignore  INSTRUCTION.md  LICENSE  README.md  pyproject.toml
 /: dataset_meta.json
docs/: hardware_setup.md  install_from_scratch.md  pipeline.md  teleop_tuning.md  troubleshooting.md  usage.md
examples/: check_recording.py  run_live_test.py
examples/DROID/: franka_env_kist.py
install/: check_environment.sh  install_nuc.sh  install_pro4000.sh  install_pro4000_rt.sh  latency_calibration.json
install/nuc/: README.md  cleanup_polymetis.sh
polymetis_franka_teleop/common/: gripper_specs.py  latency_config.py  latency_util.py  realtime_util.py  rotation_transformer.py  rotation_util.py  timestamp_accumulator.py
polymetis_franka_teleop/real_world/: art_gripper_controller.py  franka_gripper_controller.py  franka_interpolation_controller.py  franka_policy_env.py  franka_vive_env.py  image_transform.py  keystroke_counter.py  multi_realsense.py  multi_zed.py  real_inference_util.py  single_realsense.py  single_zed.py  video_recorder.py  (+2 more)
scripts_real/: _conversion_common.py  bench_fk_consistency.py  calibrate_all_latencies.py  calibrate_art_gripper_latency.py  calibrate_franka_arm_direct.py  calibrate_franka_gripper_latency.py  calibrate_franka_robot_latency.py  calibrate_realsense_latency.py  calibrate_zed_latency.py  convert_franka_vive_to_umi_format.py  convert_to_diffusion_policy.py  convert_to_gr00t_droid.py  convert_to_gr00t_lerobot.py  convert_to_lerobot.py  demo_franka_vive.py  eval_franka_policy.py  launch_franka_unified_server.py  preflight_check.py
(+32 files in other folders)
